chapter 9: change Language

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.tag {
+    color: #fff;
+    padding: 5px;
+    border-radius: 10px;
+}
+.tag-user {
+    background: #28a745;
+}
+.tag-moderator {
+    background: #ffc107;
+}
+.tag-admin {
+    background-color: #dc3545;
+}
+.tag-mb {
+    font-size: 12px;
+}
