--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -73,7 +73,7 @@ ul li{
     outline: none;
     line-height: 1;
     width: 100%;
-    padding: 0.65rem calc(45px + 1.5rem) 0.65rem 1.5rem;
+    padding: 0.65rem calc(45px) 0.65rem 1.5rem;
     border-radius: 3px;
     border: 1px solid #ccc;
 }
