censorship post + detail post + additional: tab post + search posts + add tab dashbroard info

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -19,3 +19,9 @@
 .tag-mb {
     font-size: 12px;
 }
+.bg-success{
+    background: #5cb85c;
+    color: #fff;
+    padding: 15px;
+    border-radius: 16px;
+}
