--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -20,6 +20,10 @@ ul li{
     list-style: none;
 }
 
+.nav-custom {
+    z-index: 100!important;
+}
+
 .bg-main {
     background: #e1e1e1;
 }
@@ -73,7 +77,7 @@ ul li{
     outline: none;
     line-height: 1;
     width: 100%;
-    padding: 0.65rem calc(45px) 0.65rem 1.5rem;
+    padding: 0.65rem calc(45px) 0.65rem 0.5rem;
     border-radius: 3px;
     border: 1px solid #ccc;
 }
