--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,3 +1,15 @@
+.verify-user{
+    width: 15px;
+    height: 15px;
+    background: #28a745;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-size: 10px;
+}
+
 .main-content__list-item {
     padding: 15px 0;
     overflow-y: auto;
