--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -25,6 +25,18 @@
     padding: 15px;
     border-radius: 16px;
 }
+.alert {
+    position: relative;
+    padding: 0.75rem 1.25rem;
+    margin-bottom: 1rem;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+}
+.alert-danger {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+}
 .img-manager {
     max-width: 40px;
     max-height: 40px;
