--- a/resources/css/create_post.css
+++ b/resources/css/create_post.css
@@ -3,6 +3,10 @@
 @import "summernote/dist/summernote-lite.css";
 @import "toastify-js/src/toastify.css";
 
+a:hover {
+    text-decoration: none!important;
+}
+
 span.select2.select2-container.select2-container--default{
     width: 100%!important;
 }
@@ -84,6 +88,6 @@ ul#tagList li > span.rmTag {
 ul#tagList li > span.rmTag:hover {
     background-color: #ef9a9a;
 }
-.btn-add-tag svg{
+.btn-add-tag .icon-add{
     width: 15px;
 }
