--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -264,6 +264,7 @@ ul li{
     width: 50px!important;
     height: 50px;
     border-radius: 50%;
+    object-fit: cover;
 }
 
 .info-post-item h5 {
