--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -25,10 +25,19 @@
     padding: 15px;
     border-radius: 16px;
 }
+.img-manager {
+    max-width: 40px;
+    max-height: 40px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+}
 
 .imgColumnTable {
     margin: 0 auto;
     width: 40px;
     height: 40px;
     border-radius: 50%;
+    object-fit: cover;
 }
