--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -25,6 +25,81 @@
     margin-right: 10px;
 }
 
+.title-chart {
+    font-weight: bold;
+    font-size: 22px;
+}
+
+#pie-canvas {
+    width: 100%;
+    max-height: 100%;
+}
+
+.card-dashboard-sub {
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    border-top: 1px solid #ccc;
+}
+
+.post-top-chart {
+    max-width: 33%;
+    width: 100%;
+}
+
+.item-top-chart {
+    transition: all 0.3s ease-in-out;
+}
+
+.item-top-chart:hover {
+    background: rgb(200 201 204);
+}
+
+.thumbnail-top-chart {
+    border-radius: 10px;
+    object-fit: cover;
+}
+
+.text-vertical-overload {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.title-item-top-chart {
+    color: #000;
+    font-size: 21px;
+    font-weight: bold;
+}
+
+.text-muted {
+    color: #6c757d !important;
+}
+
+.footer-item-top-chart {
+    justify-content: space-between !important;
+    display: flex !important;
+    align-items: center;
+}
+
+.verifyText {
+    font-size: 12px;
+    color: #725858;
+    width: fit-content;
+    border: 1px solid #28a745;
+    padding: 5px;
+    border-radius: 10px;
+}
+
+@media (max-width: 1155px) {
+    .card-dashboard-sub {
+        flex-wrap: wrap;
+    }
+
+    .post-top-chart {
+        max-width: 48%;
+    }
+}
+
 @media (max-width: 1150px) and (min-width: 951px) {
     .nav-content {
         max-width: 430px;
@@ -43,6 +118,17 @@
         display: none!important;
     }
 }
+
+@media (max-width: 817px) {
+    .post-top-chart {
+        max-width: 100%;
+    }
+
+    .post-top-chart:nth-child(2) {
+        margin: 15px 0!important;
+    }
+}
+
 
 @media (max-width: 805px) and (min-width: 640px) {
     .nav-content {
